--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,17 +12,17 @@ jobs:
     runs-on: ubuntu-latest
     container: python:3.9-slim
     steps: 
-	name: Checkout
-	uses: actions/checkout@v3
-	
-	name: Install dependencies
-	run: 
-	  python3 -m pip install --upgrade pip
-	  pip install -r requirement.txt
-	
-	name: Linit with flake8
-	run:  |
-	   flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
-	   flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
-	name: Run unit test with nose
-	run: nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
+      - name: checkout
+        uses: ["actions/checkout@v3"]
+
+      - name: Install dependencies
+        run: 
+          python3 -m pip install --upgrade pip
+          pip install -r requirement.txt
+    
+      - name: Lint with flake8
+        run:  |
+          flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
+      - name: Run unit test with nose
+        run: nosetests -v --with-spec --spec-color --with-coverage --cover-package=app
