--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,7 +13,7 @@ jobs:
     container: python:3.9-slim
     steps: 
       - name: checkout
-        uses: ["actions/checkout@v3"]
+        uses: "actions/checkout@v3"
 
       - name: Install dependencies
         run: 
