--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,7 +16,7 @@ jobs:
         uses: "actions/checkout@v3"
 
       - name: Install dependencies
-        run: 
+        run: | 
           pip3 freeze > requirement.txt
           python3 -m pip install --upgrade pip
           pip install -r requirement.txt
