--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -23,6 +23,7 @@ jobs:
     
       - name: Lint with flake8
         run: |
+          pip3 install flake8
           flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
       - name: Run unit test with nose
