--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,6 +27,5 @@ jobs:
           flake8 service --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 service --count --max-complexity=10 --max-line-length=127 --statistics
       - name: Run unit test with coverage
-        run: |
-          pip3 install coverage
-          coverage run -m unittest discover
+        run: 
+          python -m unittest discover
