--- a/labs/02_add_git_trigger/triggertemplate.yaml
+++ b/labs/02_add_git_trigger/triggertemplate.yaml
@@ -1,10 +1,17 @@
 apiVersion: triggers.tekton.dev/v1beta1
 kind: TriggerTemplate
 metadata:
-  name: <place-name-here>
+  name: cd-template
 spec:
   params:
   # Add parameters here
+    - name: repository
+      description: "The git repo"
+      default: " "
+    
+    - name: branch
+      description: "The branch for the git repo"
+      default: master
   resourcetemplates:
     - apiVersion: tekton.dev/v1beta1
       kind: PipelineRun
@@ -12,3 +19,10 @@ spec:
         generateName: cd-pipeline-run-
       spec:
       # Add pipeline definition here
+        serviceAccountName: pipeline
+        pipelineRef: cd-pipeline
+        params:
+          - name: repo-url
+            value: $(tt.params.repository)
+          - name: branch
+            value: $(tt.params.branch)
