--- a/labs/06_deploy_to_kubernetes/pipeline.yaml
+++ b/labs/06_deploy_to_kubernetes/pipeline.yaml
@@ -6,10 +6,13 @@ spec:
   workspaces:
     - name: pipeline-workspace
   params:
+    - name: app-name
     - name: build-image
     - name: repo-url
     - name: branch
       default: master
+    
+
   tasks:
     - name: init
       workspaces:
@@ -71,11 +74,12 @@ spec:
       runAfter:
         - tests
 
-    - name: deploy
-      taskRef:
-        name: echo
-      params:
-      - name: message
-        value: "Deploying $(params.branch) branch of $(params.repo-url) ..."
-      runAfter:
-        - build
+        - name: deploy
+          taskRef:
+            name: openshift-client
+            kind: ClusterTask
+          params:
+          - name: SCRIPT
+            value: "oc create deploy $(params.app-name) --image=$(params.build-image)"
+          runAfter:
+            - build
